GRD routs: /middleware/multer
