# server/api/openapi.json
@@ -193,10 +193,9 @@
         "description": "upload new file",
         "requestBody": {
           "content": {
-            "image/png": {
+            "multipart/form-data": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "$ref": "#/components/schemas/file"
               }
             }
           }
@@ -246,7 +245,6 @@
               "type": "number",
               "default": 1
             },
-            "example": 1,
             "required": false
           }
         ],
@@ -368,7 +366,7 @@
           "200": {
             "description": "the faile has been downloaded",
             "content": {
-              "text/html": {
+              "image/png": {
                 "schema": {
                   "type": "string",
                   "format": "binary"
@@ -403,6 +401,15 @@
             "required": true
           }
         ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/file"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "the faile has been updated",
@@ -437,7 +444,7 @@
           }
         },
         "example": {
-          "id": "admin@mail.ru",
+          "id": "admin",
           "password": "password"
         }
       },
@@ -459,6 +466,15 @@
         }
       },
       "file": {
+        "type": "object",
+        "properties": {
+          "fileName": {
+            "type": "string",
+            "format": "binary"
+          }
+        }
+      },
+      "fileInfo": {
         "type": "object",
         "properties": {
           "title": {
@@ -485,7 +501,7 @@
         "type": "array",
         "description": "card array",
         "items": {
-          "$ref": "#/components/schemas/file"
+          "$ref": "#/components/schemas/fileInfo"
         }
       },
       "responseReport": {
